--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend for the Bike Loop Generator App",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
